# datasette-searchable-filter-columns

./: .gitignore  LICENSE  README.md  datasette_searchable_filter_columns.py  pyproject.toml
.github/workflows/: publish.yml
tests/: test_datasette_searchable_filter_columns.py
