[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "datasette-searchable-filter-columns"
version = "0.1.0"
description = "Datasette plugin that makes table filter column dropdowns searchable"
readme = "README.md"
authors = [{name = "Julius Welby"}]
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
    "datasette",
    "datasette-plugin",
    "filters",
    "autocomplete",
    "searchable-select",
    "ui",
]
requires-python = ">=3.9"
dependencies = [
    "datasette",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Datasette",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Front-Ends",
]

[project.urls]
Homepage = "https://github.com/jwelby/datasette-searchable-filter-columns"
Issues = "https://github.com/jwelby/datasette-searchable-filter-columns/issues"
Source = "https://github.com/jwelby/datasette-searchable-filter-columns"

[project.entry-points.datasette]
searchable_filter_columns = "datasette_searchable_filter_columns"

[tool.setuptools]
py-modules = ["datasette_searchable_filter_columns"]
